# writers

./: .baw  .gitignore  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.cfg
.github/: dependabot.yml
.github/workflows/: docker.yml  pypi.yml  release.yml  test.yml
content/: conf.py  index.rst  table.rst
content/darstellung/: index.rst  seitenrand.rst  seitenzahlen.rst
content/druck_publikation/: index.rst
content/elemente/: deckblatt.rst  erklaerung.rst  index.rst  inhaltsverzeichnis.rst
content/inhalt/: index.rst
content/technik/: index.rst
docs/: bugs.rst  howto.rst  index.rst  todo.rst
docs/releases/: 0.2.0.rst  0.3.0.rst  1.3.0.rst  backlog.rst  releases.rst
static/: conf.py  index.rst  literatur.rst
static/aufbau_gliederung/: absatz.rst  index.rst  kapitel1.rst
static/darstellung/: grauwert.rst  index.rst  mathematik.rst  satzzeichen.rst  schreibweise.rst  schriftbild.rst  seitenrand.rst  seitenzahlen.rst
static/druck_publikation/: checkliste.rst  druck.rst  publikation.rst
static/elemente/: abkuerzungsverzeichnis.rst  erklaerung.rst  fusszeile.rst  index.rst  inhaltsverzeichnis.rst  titelblatt.rst
static/monat/: index.rst
static/technik/: sonderzeichen.rst  texteditor.rst
static/text/: fussnote.rst  index.rst  zitat.rst
tests/: __init__.py  conftest.py  test_cli.py  test_generator.py  test_web.py  update.py
writers/: __init__.py  __main__.py  cli.py  generator.py  verify.py  web.py
writers/static/: index.rst  literatur.rst
(+34 files in other folders)
